fixed overflow

--- a/client/styles/layout/app-sidebar.scss
+++ b/client/styles/layout/app-sidebar.scss
@@ -58,8 +58,16 @@
                 max-width: 100%;
                 text-transform: uppercase;
             }
+            &__wrapper {
+                display: flex !important;
+                flex-direction: column;
+                overflow: unset;
+                height: 100%;
+            }
             &__list {
                 margin-top: 10px;
+                overflow: auto;
+                flex-grow: 1;
                 @media (max-width: $screen-phone) {
                     margin-top: 15px;
                 }
@@ -196,10 +204,13 @@
                 }
             }
             &._upload {
-                position: absolute;
-                bottom: 0;
-                margin: 0 0 20px 0;
-                padding: 0;
+                margin: 0;
+                min-height: 60px;
+                background-color: #132336;
+                a {
+                    min-height: 60px;
+                    padding: 20px 0 20px 24px;
+                }
             }
             @media (max-width: $screen-phone) {
                 margin: 8px 56px 17px 24px;
